--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "markdown-table": "^2.0.0",
     "moment": "^2.24.0",
     "morgan": "~1.9.1",
-    "npm": "^6.14.4",
-    "pug": "2.0.0-beta11",
-    "puppeteer": "10.1.0",
+    "npm": "^7.0.0",
+    "pug": "3.0.2",
+    "puppeteer": "13.0.1",
     "slugify": "^1.4.0",
     "write": "^2.0.0",
     "xmldom": "^0.3.0"
